logs/hw/sensor-expanded.h

#define NULL ((void *)0)
#define NULL ((void *)0)
typedef __uint8_t uint8_t ;
typedef __int16_t int16_t ;
typedef __uint16_t uint16_t ;
typedef __int32_t int32_t ;
typedef __uint32_t uint32_t ;
typedef __int64_t int64_t ;
void os_init(int (*fn)(int argc, char **argv));
enum os_error {
    OS_OK = 0,
    OS_ENOMEM = 1,
    OS_EINVAL = 2,
    OS_INVALID_PARM = 3,
    OS_MEM_NOT_ALIGNED = 4,
    OS_BAD_MUTEX = 5,
    OS_TIMEOUT = 6,
    OS_ERR_IN_ISR = 7,
    OS_ERR_PRIV = 8,
    OS_NOT_STARTED = 9,
    OS_ENOENT = 10,
    OS_EBUSY = 11,
    OS_ERROR = 12,
};
struct os_task;
typedef uint32_t os_time_t;
#define OS_TIMEOUT_NEVER (OS_TIME_MAX)
struct os_timeval {

    int64_t tv_sec;

    int32_t tv_usec;
};
struct os_timezone {

    int16_t tz_minuteswest;

    int16_t tz_dsttime;
};
struct os_event;
typedef void os_event_fn(struct os_event *ev);
struct os_event {

    uint8_t ev_queued;





    os_event_fn *ev_cb;

    void *ev_arg;

    struct { struct os_event *stqe_next; } ev_next;
};
struct os_dev;
typedef int (*os_dev_init_func_t)(struct os_dev *, void *);
struct os_dev_handlers {




    os_dev_open_func_t od_open;






    os_dev_suspend_func_t od_suspend;



    os_dev_resume_func_t od_resume;




    os_dev_close_func_t od_close;
};
struct os_dev {

    struct os_dev_handlers od_handlers;

    os_dev_init_func_t od_init;

    void *od_init_arg;

    uint8_t od_stage;

    uint8_t od_priority;




    uint8_t od_open_ref;

    uint8_t od_flags;

    const char *od_name;
    struct { struct os_dev *stqe_next; } od_next;
};
struct os_mutex {
    struct { struct os_task *slh_first; } mu_head;
    uint8_t _pad;

    uint8_t mu_prio;

    uint16_t mu_level;

    struct os_task *mu_owner;
};
struct os_task;
struct os_task {

    os_stack_t *t_stackptr;

    os_stack_t *t_stacktop;

    uint16_t t_stacksize;

    uint8_t t_taskid;

    uint8_t t_prio;

    uint8_t t_state;

    uint8_t t_flags;
    uint8_t t_lockcnt;
    uint8_t t_pad;


    const char *t_name;

    os_task_func_t t_func;

    void *t_arg;


    void *t_obj;


    struct os_sanity_check t_sanity_check;


    os_time_t t_next_wakeup;

    os_time_t t_run_time;




    uint32_t t_ctx_sw_cnt;

    struct { struct os_task *stqe_next; } t_os_task_list;
    struct { struct os_task *tqe_next; struct os_task **tqe_prev; } t_os_list;
    struct { struct os_task *sle_next; } t_obj_list;
};
struct os_task;
struct sensor;
typedef enum {

    SENSOR_TYPE_NONE = 0,

    SENSOR_TYPE_ACCELEROMETER = (1 << 0),

    SENSOR_TYPE_MAGNETIC_FIELD = (1 << 1),

    SENSOR_TYPE_GYROSCOPE = (1 << 2),

    SENSOR_TYPE_LIGHT = (1 << 3),

    SENSOR_TYPE_TEMPERATURE = (1 << 4),

    SENSOR_TYPE_AMBIENT_TEMPERATURE = (1 << 5),

    SENSOR_TYPE_PRESSURE = (1 << 6),

    SENSOR_TYPE_PROXIMITY = (1 << 7),

    SENSOR_TYPE_RELATIVE_HUMIDITY = (1 << 8),

    SENSOR_TYPE_ROTATION_VECTOR = (1 << 9),

    SENSOR_TYPE_ALTITUDE = (1 << 10),

    SENSOR_TYPE_WEIGHT = (1 << 11),

    SENSOR_TYPE_LINEAR_ACCEL = (1 << 12),

    SENSOR_TYPE_GRAVITY = (1 << 13),

    SENSOR_TYPE_EULER = (1 << 14),

    SENSOR_TYPE_COLOR = (1 << 15),




    SENSOR_TYPE_USER_DEFINED_1 = (1 << 26),

    SENSOR_TYPE_USER_DEFINED_2 = (1 << 27),

    SENSOR_TYPE_USER_DEFINED_3 = (1 << 28),

    SENSOR_TYPE_USER_DEFINED_4 = (1 << 29),

    SENSOR_TYPE_USER_DEFINED_5 = (1 << 30),

    SENSOR_TYPE_USER_DEFINED_6 = (1 << 31),

    SENSOR_TYPE_ALL = 0xFFFFFFFF
} sensor_type_t;
typedef enum {

    SENSOR_EVENT_TYPE_DOUBLE_TAP = (1 << 0),

    SENSOR_EVENT_TYPE_SINGLE_TAP = (1 << 1),

    SENSOR_EVENT_TYPE_FREE_FALL = (1 << 2),

    SENSOR_EVENT_TYPE_SLEEP_CHANGE = (1 << 3),

    SENSOR_EVENT_TYPE_WAKEUP = (1 << 4),

    SENSOR_EVENT_TYPE_SLEEP = (1 << 5),

    SENSOR_EVENT_TYPE_ORIENT_CHANGE = (1 << 6),

    SENSOR_EVENT_TYPE_ORIENT_X_CHANGE = (1 << 7),

    SENSOR_EVENT_TYPE_ORIENT_Y_CHANGE = (1 << 8),

    SENSOR_EVENT_TYPE_ORIENT_Z_CHANGE = (1 << 9),

    SENSOR_EVENT_TYPE_ORIENT_X_L_CHANGE = (1 << 10),

    SENSOR_EVENT_TYPE_ORIENT_Y_L_CHANGE = (1 << 11),

    SENSOR_EVENT_TYPE_ORIENT_Z_L_CHANGE = (1 << 12),

    SENSOR_EVENT_TYPE_ORIENT_X_H_CHANGE = (1 << 13),

    SENSOR_EVENT_TYPE_ORIENT_Y_H_CHANGE = (1 << 14),

    SENSOR_EVENT_TYPE_ORIENT_Z_H_CHANGE = (1 << 15),
} sensor_event_type_t;
struct sensor_cfg {




    uint8_t sc_valtype;

    uint8_t _reserved[3];
};
typedef union {
    struct sensor_mag_data *smd;
    struct sensor_accel_data *sad;
    struct sensor_euler_data *sed;
    struct sensor_quat_data *sqd;
    struct sensor_accel_data *slad;
    struct sensor_accel_data *sgrd;
    struct sensor_gyro_data *sgd;
    struct sensor_temp_data *std;
    struct sensor_temp_data *satd;
    struct sensor_light_data *sld;
    struct sensor_color_data *scd;
    struct sensor_press_data *spd;
    struct sensor_humid_data *srhd;
}sensor_data_t;
typedef int (*sensor_data_func_t)(struct sensor *, void *, void *,
             sensor_type_t);
typedef int
(*sensor_trigger_cmp_func_t)(sensor_type_t, sensor_data_t *,
                             sensor_data_t *, void *);
typedef int
(*sensor_notifier_func_t)(struct sensor *, void *, sensor_event_type_t);
typedef void
(*sensor_error_func_t)(struct sensor *sensor, void *arg, int status);
struct sensor_listener {




    sensor_type_t sl_sensor_type;


    sensor_data_func_t sl_func;


    void *sl_arg;




    struct { struct sensor_listener *sle_next; } sl_next;
};
struct sensor_notifier {




    sensor_event_type_t sn_sensor_event_type;




    sensor_notifier_func_t sn_func;


    void *sn_arg;




    struct { struct sensor_notifier *sle_next; } sn_next;
};
struct sensor_type_traits {

    sensor_type_t stt_sensor_type;


    sensor_data_t stt_low_thresh;


    sensor_data_t stt_high_thresh;


    uint8_t stt_algo;


    uint16_t stt_poll_n;

    uint16_t stt_polls_left;






    sensor_trigger_cmp_func_t stt_trigger_cmp_algo;






    struct sensor *stt_sensor;




    struct { struct sensor_type_traits *sle_next; } stt_next;
};
typedef int (*sensor_read_func_t)(struct sensor *, sensor_type_t,
        sensor_data_func_t, void *, uint32_t);
typedef int (*sensor_get_config_func_t)(struct sensor *, sensor_type_t,
        struct sensor_cfg *);
typedef int (*sensor_set_config_func_t)(struct sensor *, void *);
typedef int (*sensor_set_trigger_thresh_t)(struct sensor *, sensor_type_t,
                                           struct sensor_type_traits *stt);
typedef int (*sensor_clear_trigger_thresh_t)(struct sensor *sensor, sensor_type_t type);
typedef int (*sensor_set_notification_t)(struct sensor *,
                                         sensor_event_type_t);
typedef int (*sensor_unset_notification_t)(struct sensor *,
                                           sensor_event_type_t);
typedef int (*sensor_handle_interrupt_t)(struct sensor *sensor);
typedef int (*sensor_reset_t)(struct sensor *);
struct sensor_driver {
    sensor_read_func_t sd_read;
    sensor_get_config_func_t sd_get_config;
    sensor_set_config_func_t sd_set_config;
    sensor_set_trigger_thresh_t sd_set_trigger_thresh;
    sensor_clear_trigger_thresh_t sd_clear_low_trigger_thresh;
    sensor_clear_trigger_thresh_t sd_clear_high_trigger_thresh;
    sensor_set_notification_t sd_set_notification;
    sensor_unset_notification_t sd_unset_notification;
    sensor_handle_interrupt_t sd_handle_interrupt;
    sensor_reset_t sd_reset;
};
struct sensor_timestamp {
    struct os_timeval st_ostv;
    struct os_timezone st_ostz;
    uint32_t st_cputime;
};
struct sensor_int {
    uint8_t host_pin;
    uint8_t device_pin;
    uint8_t active;
};
struct sensor_itf {






    uint8_t si_type;


    uint8_t si_num;


    uint8_t si_cs_pin;


    uint16_t si_addr;


    struct os_mutex *si_lock;



    uint8_t si_low_pin;


    uint8_t si_high_pin;




    struct sensor_int si_ints[(2)];
};
struct sensor {



    struct os_dev *s_dev;


    struct os_mutex s_lock;






    sensor_type_t s_types;


    sensor_type_t s_mask;



    uint32_t s_poll_rate;


    os_time_t s_next_run;




    struct sensor_driver *s_funcs;


    struct sensor_timestamp s_sts;


    struct sensor_itf s_itf;


    struct os_event s_interrupt_evt;




    struct { struct sensor_listener *slh_first; } s_listener_list;


    sensor_error_func_t s_err_fn;
    void *s_err_arg;




    struct { struct sensor_notifier *slh_first; } s_notifier_list;


    struct { struct sensor_type_traits *slh_first; } s_type_traits_list;


    struct { struct sensor *sle_next; } s_next;
};
struct sensor_read_ctx {
    sensor_data_func_t user_func;
    void *user_arg;
};
int
sensor_itf_lock(struct sensor_itf *si, os_time_t timeout);
void
sensor_itf_unlock(struct sensor_itf *si);
int sensor_init(struct sensor *sensor, struct os_dev *dev);
int sensor_lock(struct sensor *sensor);
void sensor_unlock(struct sensor *sensor);
int sensor_register_listener(struct sensor *sensor, struct sensor_listener *listener);
int sensor_unregister_listener(struct sensor *sensor, struct sensor_listener *listener);
int sensor_register_err_func(struct sensor *sensor,
        sensor_error_func_t err_fn, void *arg);
int sensor_register_notifier(struct sensor *sensor, struct sensor_notifier *notifier);
int
sensor_itf_lock(struct sensor_itf *si, uint32_t timeout)
{

    int rc;
    os_time_t ticks;

    if (!si->si_lock) {
        return 0;
    }

    rc = os_time_ms_to_ticks(timeout, &ticks);
    if (rc) {
        return rc;
    }

    rc = os_mutex_pend(si->si_lock, ticks);
    if (rc == 0 || rc == OS_NOT_STARTED) {
        return (0);
    }

    return (rc);



}
void
sensor_itf_unlock(struct sensor_itf *si)
{

    if (!si->si_lock) {
        return;
    }

    os_mutex_release(si->si_lock);

}
int
sensor_lock(struct sensor *sensor)
{
    int rc;

    rc = os_mutex_pend(&sensor->s_lock, (
# 922 "repos/apache-mynewt-core/hw/sensor/src/sensor.c" 3 4
                                       (0xffffffffUL)
# 922 "repos/apache-mynewt-core/hw/sensor/src/sensor.c"
                                       ));
    if (rc == 0 || rc == OS_NOT_STARTED) {
        return (0);
    }
    return (rc);
}
void
sensor_unlock(struct sensor *sensor)
{
    os_mutex_release(&sensor->s_lock);
}
int
sensor_init(struct sensor *sensor, struct os_dev *dev)
{
    int rc;

    memset(sensor, 0, sizeof(*sensor));

    rc = os_mutex_init(&sensor->s_lock);
    if (rc != 0) {
        goto err;
    }
    sensor->s_dev = dev;

    return (0);
err:
    return (rc);
}
int
sensor_register_listener(struct sensor *sensor,
        struct sensor_listener *listener)
{
    int rc;






    rc = sensor_lock(sensor);
    if (rc != 0) {
        goto err;
    }

    do { (((listener))->sl_next.sle_next) = (((&sensor->s_listener_list))->slh_first); (((&sensor->s_listener_list))->slh_first) = (listener); } while (0);

    sensor_unlock(sensor);

    return (0);
err:
    return (rc);
}
int
sensor_unregister_listener(struct sensor *sensor,
        struct sensor_listener *listener)
{
    int rc;
    struct sensor_listener *tmp;

    rc = sensor_lock(sensor);
    if (rc != 0) {
        goto err;
    }

    for ((tmp) = (((&sensor->s_listener_list))->slh_first); (tmp); (tmp) = (((tmp))->sl_next.sle_next)) {
        if (listener == tmp) {

            do { if ((((&sensor->s_listener_list))->slh_first) == (listener)) { do { ((((&sensor->s_listener_list)))->slh_first) = ((((((&sensor->s_listener_list)))->slh_first))->sl_next.sle_next); } while (0); } else { struct sensor_listener *curelm = (((&sensor->s_listener_list))->slh_first); while (((curelm)->sl_next.sle_next) != (listener)) curelm = ((curelm)->sl_next.sle_next); ((curelm)->sl_next.sle_next) = ((((curelm)->sl_next.sle_next))->sl_next.sle_next); } } while (0)
                            ;
            break;
        }
    }

    sensor_unlock(sensor);

    return (0);
err:
    return (rc);
}
int
sensor_register_err_func(struct sensor *sensor, sensor_error_func_t err_fn,
                         void *arg)
{
    int rc;

    rc = sensor_lock(sensor);
    if (rc != 0) {
        goto err;
    }

    sensor->s_err_fn = err_fn;
    sensor->s_err_arg = arg;

    sensor_unlock(sensor);

    return (0);
err:
    return (rc);
}
int
sensor_register_notifier(struct sensor *sensor,
                         struct sensor_notifier *notifier)
{
    int rc;
    struct sensor_notifier *tmp;

    rc = sensor_lock(sensor);
    if (rc != 0) {
        goto err;
    }


    for ((tmp) = (((&sensor->s_notifier_list))->slh_first); (tmp); (tmp) = (((tmp))->sn_next.sle_next)) {
        if (notifier == tmp) {
            rc = (-2);
            goto err;
        }
    }

    do { (((notifier))->sn_next.sle_next) = (((&sensor->s_notifier_list))->slh_first); (((&sensor->s_notifier_list))->slh_first) = (notifier); } while (0);

    rc = sensor_set_notification(sensor, notifier);
    if (rc != 0) {
        goto remove;
    }

    sensor_unlock(sensor);

    return (0);

remove:
    do { if ((((&sensor->s_notifier_list))->slh_first) == (notifier)) { do { ((((&sensor->s_notifier_list)))->slh_first) = ((((((&sensor->s_notifier_list)))->slh_first))->sn_next.sle_next); } while (0); } else { struct sensor_notifier *curelm = (((&sensor->s_notifier_list))->slh_first); while (((curelm)->sn_next.sle_next) != (notifier)) curelm = ((curelm)->sn_next.sle_next); ((curelm)->sn_next.sle_next) = ((((curelm)->sn_next.sle_next))->sn_next.sle_next); } } while (0)
                    ;

err:
    sensor_unlock(sensor);
    return (rc);
}