rust/mynewt/src/hw/sensor/bindings.rs

#[doc = " Read a single value from a sensor, given a specific sensor type"]
#[doc = " (e.g. SENSOR_TYPE_PROXIMITY)."]
#[doc = ""]
#[doc = " - __`sensor`__: The sensor to read from"]
#[doc = " - __`type`__: The type(s) of sensor values to read.  Mask containing that type, provide"]
#[doc = "        all, to get all values."]
#[doc = " - __`data_func`__: The function to call with each value read.  If NULL, it calls all"]
#[doc = "        sensor listeners associated with this function."]
#[doc = " - __`arg`__: The argument to pass to the read callback."]
#[doc = " - __`timeout`__: Timeout. If block until result, specify OS_TIMEOUT_NEVER, 0 returns"]
#[doc = "        immediately (no wait.)"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_read_func_t = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: *mut sensor,
        arg2: sensor_type_t,
        arg3: sensor_data_func_t,
        arg4: *mut ::cty::c_void,
        arg5: u32,
    ) -> ::cty::c_int,
>;
#[doc = " Get the configuration of the sensor for the sensor type.  This includes"]
#[doc = " the value type of the sensor."]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor"]
#[doc = " - __`type`__: The type of sensor value to get configuration for"]
#[doc = " - __`cfg`__: A pointer to the sensor value to place the returned result into."]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_get_config_func_t = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: *mut sensor,
        arg2: sensor_type_t,
        arg3: *mut sensor_cfg,
    ) -> ::cty::c_int,
>;
#[doc = " Send a new configuration register set to the sensor."]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor-specific stucture"]
#[doc = " - __`arg`__: Ptr to the sensor-specific configuration structure"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_set_config_func_t = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut sensor, arg2: *mut ::cty::c_void) -> ::cty::c_int,
>;
#[doc = " Set the trigger and threshold values for a specific sensor for the sensor"]
#[doc = " type."]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor"]
#[doc = " - __`type`__: type of sensor"]
#[doc = " - __`stt`__: Ptr to teh sensor traits"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_set_trigger_thresh_t = ::core::option::Option<
    unsafe extern "C" fn(
        arg1: *mut sensor,
        arg2: sensor_type_t,
        stt: *mut sensor_type_traits,
    ) -> ::cty::c_int,
>;
#[doc = " Clear the high/low threshold values for a specific sensor for the sensor"]
#[doc = " type."]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor"]
#[doc = " - __`type`__: Type of sensor"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_clear_trigger_thresh_t = ::core::option::Option<
    unsafe extern "C" fn(sensor: *mut sensor, type_: sensor_type_t) -> ::cty::c_int,
>;
#[doc = " Set the notification expectation for a targeted set of events for the"]
#[doc = " specific sensor. After this function returns successfully, the implementer"]
#[doc = " shall post corresponding event notifications to the sensor manager."]
#[doc = ""]
#[doc = " - __`sensor`__: The sensor to expect notifications from."]
#[doc = " - __`event`__: The mask of event types to expect notifications from."]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_set_notification_t = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut sensor, arg2: sensor_event_type_t) -> ::cty::c_int,
>;
#[doc = " Unset the notification expectation for a targeted set of events for the"]
#[doc = " specific sensor."]
#[doc = ""]
#[doc = " - __`sensor`__: The sensor."]
#[doc = " - __`event`__: The mask of event types."]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_unset_notification_t = ::core::option::Option<
    unsafe extern "C" fn(arg1: *mut sensor, arg2: sensor_event_type_t) -> ::cty::c_int,
>;
#[doc = " Let driver handle interrupt in the sensor context"]
#[doc = ""]
#[doc = " - __`sensor`__: Ptr to the sensor"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero error code on failure."]
pub type sensor_handle_interrupt_t =
    ::core::option::Option<unsafe extern "C" fn(sensor: *mut sensor) -> ::cty::c_int>;
#[doc = " Reset Sensor function Ptr"]
#[doc = ""]
#[doc = " - __`Ptr`__: to the sensor"]
#[doc = ""]
#[doc = " Return: 0 on success, non-zero on failure"]
pub type sensor_reset_t =
    ::core::option::Option<unsafe extern "C" fn(arg1: *mut sensor) -> ::cty::c_int>;
#[repr(C)]
#[derive(Default)]
pub struct sensor_driver {
    pub sd_read: sensor_read_func_t,
    pub sd_get_config: sensor_get_config_func_t,
    pub sd_set_config: sensor_set_config_func_t,
    pub sd_set_trigger_thresh: sensor_set_trigger_thresh_t,
    pub sd_clear_low_trigger_thresh: sensor_clear_trigger_thresh_t,
    pub sd_clear_high_trigger_thresh: sensor_clear_trigger_thresh_t,
    pub sd_set_notification: sensor_set_notification_t,
    pub sd_unset_notification: sensor_unset_notification_t,
    pub sd_handle_interrupt: sensor_handle_interrupt_t,
    pub sd_reset: sensor_reset_t,
}
#[repr(C)]
pub struct sensor_timestamp {
    pub st_ostv: os_timeval,
    pub st_ostz: os_timezone,
    pub st_cputime: u32,
}
impl Default for sensor_timestamp {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Default)]
pub struct sensor_int {
    pub host_pin: u8,
    pub device_pin: u8,
    pub active: u8,
}
#[repr(C)]
pub struct sensor_itf {
    pub si_type: u8,
    pub si_num: u8,
    pub si_cs_pin: u8,
    pub si_addr: u16,
    pub si_lock: *mut os_mutex,
    pub si_low_pin: u8,
    pub si_high_pin: u8,
    pub si_ints: [sensor_int; 2usize],
}
impl Default for sensor_itf {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct sensor {
    pub s_dev: *mut os_dev,
    pub s_lock: os_mutex,
    pub s_types: sensor_type_t,
    pub s_mask: sensor_type_t,
    #[doc = " Poll rate in MS for this sensor."]
    pub s_poll_rate: u32,
    pub s_next_run: os_time_t,
    pub s_funcs: *mut sensor_driver,
    pub s_sts: sensor_timestamp,
    pub s_itf: sensor_itf,
    pub s_interrupt_evt: os_event,
    pub s_listener_list: sensor__bindgen_ty_1,
    pub s_err_fn: sensor_error_func_t,
    pub s_err_arg: *mut ::cty::c_void,
    pub s_notifier_list: sensor__bindgen_ty_2,
    pub s_type_traits_list: sensor__bindgen_ty_3,
    pub s_next: sensor__bindgen_ty_4,
}
#[repr(C)]
pub struct sensor__bindgen_ty_1 {
    pub slh_first: *mut sensor_listener,
}
impl Default for sensor__bindgen_ty_1 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct sensor__bindgen_ty_2 {
    pub slh_first: *mut sensor_notifier,
}
impl Default for sensor__bindgen_ty_2 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct sensor__bindgen_ty_3 {
    pub slh_first: *mut sensor_type_traits,
}
impl Default for sensor__bindgen_ty_3 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[repr(C)]
pub struct sensor__bindgen_ty_4 {
    pub sle_next: *mut sensor,
}
impl Default for sensor__bindgen_ty_4 {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
impl Default for sensor {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
#[doc = " Read context for calling user function with argument"]
#[repr(C)]
pub struct sensor_read_ctx {
    pub user_func: sensor_data_func_t,
    pub user_arg: *mut ::cty::c_void,
}
impl Default for sensor_read_ctx {
    fn default() -> Self {
        unsafe { ::core::mem::zeroed() }
    }
}
extern "C" {
    #[doc = " Lock access to the sensor_itf specified by si.  Blocks until lock acquired."]
    #[doc = ""]
    #[doc = " - __`si`__: The sensor_itf to lock"]
    #[doc = " - __`timeout`__: The timeout"]
    #[doc = ""]
    #[doc = " Return: 0 on success, non-zero on failure."]
    pub fn sensor_itf_lock(si: *mut sensor_itf, timeout: os_time_t) -> ::cty::c_int;
}
extern "C" {
    #[doc = " Unlock access to the sensor_itf specified by si."]
    #[doc = ""]
    #[doc = " - __`si`__: The sensor_itf to unlock access to"]
    #[doc = ""]
    #[doc = " Return: 0 on success, non-zero on failure."]
    pub fn sensor_itf_unlock(si: *mut sensor_itf);
}
extern "C" {
    #[doc = " Initialize a sensor"]
    #[doc = ""]
    #[doc = " - __`sensor`__: The sensor to initialize"]
    #[doc = " - __`dev`__: The device to associate with this sensor."]
    #[doc = ""]
    #[doc = " Return: 0 on success, non-zero error code on failure."]
    pub fn sensor_init(sensor: *mut sensor, dev: *mut os_dev) -> ::cty::c_int;
}
extern "C" {
    #[doc = " Lock access to the sensor specified by sensor.  Blocks until lock acquired."]
    #[doc = ""]
    #[doc = " - __`sensor`__: The sensor to lock"]
    #[doc = ""]
    #[doc = " Return: 0 on success, non-zero on failure."]
    pub fn sensor_lock(sensor: *mut sensor) -> ::cty::c_int;
}
extern "C" {
    #[doc = " Unlock access to the sensor specified by sensor."]
    #[doc = ""]
    #[doc = " - __`sensor`__: The sensor to unlock access to."]
    pub fn sensor_unlock(sensor: *mut sensor);
}
extern "C" {
    #[doc = " Register a sensor listener. This allows a calling application to receive"]
    #[doc = " callbacks for data from a given sensor object."]
    #[doc = ""]
    #[doc = " For more information on the type of callbacks available, see the documentation"]
    #[doc = " for the sensor listener structure."]
    #[doc = ""]
    #[doc = " - __`sensor`__: The sensor to register a listener on"]
    #[doc = " - __`listener`__: The listener to register onto the sensor"]
    #[doc = ""]
    #[doc = " Return: 0 on success, non-zero error code on failure."]
    pub fn sensor_register_listener(
        sensor: *mut sensor,
        listener: *mut sensor_listener,
    ) -> ::cty::c_int;
}
extern "C" {
    #[doc = " Un-register a sensor listener. This allows a calling application to clear"]
    #[doc = " callbacks for a given sensor object."]
    #[doc = ""]
    #[doc = " - __`sensor`__: The sensor object"]
    #[doc = " - __`listener`__: The listener to remove from the sensor listener list"]
    #[doc = ""]
    #[doc = " Return: 0 on success, non-zero error code on failure."]
    pub fn sensor_unregister_listener(
        sensor: *mut sensor,
        listener: *mut sensor_listener,
    ) -> ::cty::c_int;
}
extern "C" {
    #[doc = " Register a sensor error callback.  The callback is executed when the sensor"]
    #[doc = " manager fails to read from the given sensor."]
    #[doc = ""]
    #[doc = " - __`sensor`__: The sensor to register an error callback on."]
    #[doc = " - __`err_fn`__: The function to execute when a read fails."]
    #[doc = " - __`arg`__: Optional argument to pass to the callback."]
    #[doc = ""]
    #[doc = " Return: 0 on success, non-zero error code on failure."]
    pub fn sensor_register_err_func(
        sensor: *mut sensor,
        err_fn: sensor_error_func_t,
        arg: *mut ::cty::c_void,
    ) -> ::cty::c_int;
}
extern "C" {
    #[doc = " Register a sensor notifier. This allows a calling application to receive"]
    #[doc = " callbacks any time a requested event is observed."]
    #[doc = ""]
    #[doc = " - __`sensor`__: The sensor to register the notifier on"]
    #[doc = " - __`notifier`__: The notifier to register"]
    #[doc = ""]
    #[doc = " Return: 0 on success, non-zero error code on failure."]
    pub fn sensor_register_notifier(
        sensor: *mut sensor,
        notifier: *mut sensor_notifier,
    ) -> ::cty::c_int;
}
